--- a/DSLs/kafka/model/src/main/resources/resource-handler.vm
+++ b/DSLs/kafka/model/src/main/resources/resource-handler.vm
@@ -15,6 +15,7 @@ package io.fabric8.kafka.client.handlers;
 import java.util.function.Predicate;
 
 import io.fabric8.kubernetes.api.model.DeletionPropagation;
+import io.fabric8.kubernetes.api.model.ListOptions;
 import io.fabric8.kubernetes.client.Config;
 import io.fabric8.kubernetes.client.ResourceHandler;
 import io.fabric8.kubernetes.client.Watch;
@@ -69,7 +70,9 @@ public class ${model.name}Handler implements ResourceHandler<${model.name}, ${mo
 
   @Override
   public Boolean delete(OkHttpClient client, Config config, String namespace, DeletionPropagation propagationPolicy, ${model.name} item) {
-    return new ${model.name}OperationsImpl(client, config).withItem(item).inNamespace(namespace).withPropagationPolicy(propagationPolicy).delete();
+    ${model.name}OperationsImpl operation = new ${model.name}OperationsImpl(client, config);
+    operation.setNamespace(namespace);
+    return operation.withItem(item).withPropagationPolicy(propagationPolicy).delete();
   }
 
   @Override
@@ -80,6 +83,11 @@ public class ${model.name}Handler implements ResourceHandler<${model.name}, ${mo
   @Override
   public Watch watch(OkHttpClient client, Config config, String namespace, ${model.name} item, String resourceVersion, Watcher<${model.name}> watcher) {
     return new ${model.name}OperationsImpl(client, config).withItem(item).inNamespace(namespace).withName(item.getMetadata().getName()).watch(resourceVersion, watcher);
+  }
+
+  @Override
+  public Watch watch(OkHttpClient client, Config config, String namespace, ${model.name} item, ListOptions listOptions, Watcher<${model.name}> watcher) {
+    return new ${model.name}OperationsImpl(client, config).withItem(item).inNamespace(namespace).withName(item.getMetadata().getName()).watch(listOptions, watcher);
   }
 
   @Override
